--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-    "name": "brews",
-    "scripts": {
-        "serve": "./node_modules/.bin/webpack-dev-server "
-    },
-    "dependencies": {},
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-env": "^1.6.0",
-        "css-loader": "^0.28.7",
-        "less": "^2.7.2",
-        "less-loader": "^4.0.5",
-        "raw-loader": "^0.5.1",
-        "style-loader": "^0.18.2",
-        "vue": "^2.4.4",
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.8.2",
-        "xml2js": "^0.4.19"
-    }
+  "name": "brews",
+  "scripts": {
+    "serve": "./node_modules/.bin/webpack-dev-server",
+    "compile": "webpack",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive ./tests"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.7",
+    "expect.js": "^0.3.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "mocha": "^3.5.3",
+    "q": "^1.5.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.18.2",
+    "vue": "^2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2",
+    "xml2js": "^0.4.19"
+  }
 }
