--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
     "compile": "webpack",
     "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive ./tests"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.15.5"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "expect.js": "^0.3.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^3.5.3",
@@ -19,6 +23,7 @@
     "raw-loader": "^0.5.1",
     "style-loader": "^0.18.2",
     "vue": "^2.4.4",
+    "vue-resource": "^1.3.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2",
     "xml2js": "^0.4.19"
