--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive ./tests"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.15.5"
   },
   "devDependencies": {
