--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.15.5"
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.5",
+    "express-session": "^1.15.6",
+    "mongoose": "^4.11.13",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
