--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "style-loader": "^0.18.2",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2",
     "xml2js": "^0.4.19"
