--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "css-loader": "^0.28.7",
     "expect.js": "^0.3.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^3.5.3",
     "q": "^1.5.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.6.2",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
