--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "serve": "./node_modules/.bin/webpack-dev-server",
     "compile": "webpack",
+    "compile-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js",
     "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive ./tests"
   },
   "dependencies": {
