--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
-  "name": "brews",
-  "scripts": {
-    "serve": "./node_modules/.bin/webpack-dev-server",
-    "compile": "webpack",
-    "compile-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js",
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive ./tests"
-  },
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.15.5",
-    "express-session": "^1.15.6",
-    "mongoose": "^4.11.13",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.7",
-    "expect.js": "^0.3.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.5",
-    "font-awesome": "^4.7.0",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.5",
-    "mocha": "^3.5.3",
-    "q": "^1.5.0",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.6.2",
-    "vue": "^2.4.4",
-    "vue-resource": "^1.3.4",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.4.1",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2",
-    "xml2js": "^0.4.19"
-  }
+   "name": "brews",
+   "scripts": {
+      "start": "./node_modules/.bin/webpack-dev-server",
+      "compile": "webpack",
+      "compile-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js",
+      "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive ./tests"
+   },
+   "dependencies": {
+      "body-parser": "^1.18.2",
+      "cookie-parser": "^1.4.3",
+      "express": "^4.16.3",
+      "express-session": "^1.15.6",
+      "mongoose": "^4.13.12",
+      "passport": "^0.4.0",
+      "passport-local": "^1.0.0"
+   },
+   "devDependencies": {
+      "babel-core": "^6.26.0",
+      "babel-loader": "^7.1.4",
+      "babel-preset-env": "^1.6.1",
+      "copy-webpack-plugin": "^4.5.1",
+      "css-loader": "^0.28.11",
+      "expect.js": "^0.3.1",
+      "extract-text-webpack-plugin": "^3.0.2",
+      "file-loader": "^1.1.11",
+      "font-awesome": "^4.7.0",
+      "less": "^2.7.3",
+      "less-loader": "^4.1.0",
+      "mocha": "^3.5.3",
+      "q": "^1.5.1",
+      "raw-loader": "^0.5.1",
+      "style-loader": "^0.18.2",
+      "url-loader": "^0.6.2",
+      "vue": "^2.5.16",
+      "vue-loader": "^14.2.2",
+      "vue-resource": "^1.5.0",
+      "vue-router": "^2.8.1",
+      "vue-template-compiler": "^2.5.16",
+      "vuex": "^2.5.0",
+      "webpack": "^3.11.0",
+      "webpack-dev-server": "^2.11.2",
+      "xml2js": "^0.4.19"
+   }
 }
