--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
    "name": "brews",
    "scripts": {
       "start": "./node_modules/.bin/webpack-dev-server",
+      "server": "node app/server.js",
       "compile": "webpack",
       "compile-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js",
       "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --recursive ./tests"
