--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
       "extract-text-webpack-plugin": "^3.0.2",
       "file-loader": "^1.1.11",
       "font-awesome": "^4.7.0",
+      "google-charts": "^1.1.0",
       "less": "^2.7.3",
       "less-loader": "^4.1.0",
       "mocha": "^3.5.3",
+      "moment": "^2.22.1",
       "q": "^1.5.1",
       "raw-loader": "^0.5.1",
       "style-loader": "^0.18.2",
