--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
       "cookie-parser": "^1.4.3",
       "express": "^4.16.3",
       "express-session": "^1.15.6",
-      "mongoose": "^4.13.12",
+      "mongoose": "^5.0.17",
       "passport": "^0.4.0",
       "passport-local": "^1.0.0"
    },
    "devDependencies": {
-      "babel-core": "^6.26.0",
+      "babel-core": "^6.26.3",
       "babel-loader": "^7.1.4",
       "babel-preset-env": "^1.6.1",
       "copy-webpack-plugin": "^4.5.1",
       "css-loader": "^0.28.11",
       "expect.js": "^0.3.1",
-      "extract-text-webpack-plugin": "^3.0.2",
       "file-loader": "^1.1.11",
       "font-awesome": "^4.7.0",
       "google-charts": "^1.1.0",
-      "less": "^2.7.3",
+      "less": "^3.0.4",
       "less-loader": "^4.1.0",
-      "mocha": "^3.5.3",
+      "mini-css-extract-plugin": "^0.4.0",
+      "mocha": "^5.1.1",
       "moment": "^2.22.1",
       "q": "^1.5.1",
       "raw-loader": "^0.5.1",
-      "style-loader": "^0.18.2",
-      "url-loader": "^0.6.2",
+      "style-loader": "^0.21.0",
+      "url-loader": "^1.0.1",
       "vue": "^2.5.16",
-      "vue-loader": "^14.2.2",
+      "vue-loader": "^15.0.9",
       "vue-resource": "^1.5.0",
-      "vue-router": "^2.8.1",
+      "vue-router": "^3.0.1",
       "vue-template-compiler": "^2.5.16",
-      "vuex": "^2.5.0",
-      "webpack": "^3.11.0",
-      "webpack-dev-server": "^2.11.2",
+      "vuex": "^3.0.1",
+      "webpack": "^4.8.1",
+      "webpack-cli": "^2.1.3",
+      "webpack-dev-server": "^3.1.4",
       "xml2js": "^0.4.19"
    }
 }
