--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "express-session": "^1.15.6",
       "mongoose": "^5.0.17",
       "passport": "^0.4.0",
-      "passport-local": "^1.0.0"
+      "passport-local": "^1.0.0",
+      "ws": "^5.2.0"
    },
    "devDependencies": {
       "babel-core": "^6.26.3",
