--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,7 @@
 [*]
-indent_size = 3;
-indent_style = space;
+indent_size = 3
+indent_style = space
+
+[*.vue]
+indent_size = 2
+indent_style = space
