--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "mongoose": "^5.0.17",
       "passport": "^0.4.0",
       "passport-local": "^1.0.0",
+      "request-promise": "^4.2.2",
       "ws": "^5.2.0"
    },
    "devDependencies": {
